# JokerDiary

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: app.js  auth.rs  database.rs  index.html  main.rs  manifest.json  security.rs  style.css  sw.js
src-tauri/: my-app-release.apk.idsig  tauri.conf.json
src-tauri/src/: main.rs
